[project]
name = "maze"
version = "0.1.0"
description = ""
authors = [
    {name = "sophiasouvi",email = "113071896+sophiasouvi@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "gymnasium (>=1.1.1,<2.0.0)",
    "stable-baselines3 (>=2.5.0,<3.0.0)",
    "scipy (>=1.15.2,<2.0.0)",
    "tensorboard (>=2.19.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
